this is a new change in title

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -13,7 +13,7 @@
   <a class="active" href="#home"><img src="images/1.png"></a>
   
   <div class="topnav-right">
-    <a href="#search">Quick Contact (+92) 300 564 874</a>
+    <a href="#search">Quick Contact (+92)</a>
   </div>
 </div>
   
