--- a/public-html/index.html
+++ b/public-html/index.html
@@ -11,9 +11,9 @@
 <!--   first navbar--->
 <div class="topnav1">
   <a class="active" href="#home"><img src="images/1.png"></a>
-  
+
   <div class="topnav-right">
-    <a href="#search">Quick Contact (+92)</a>
+    <a href="#search">Quick Contact (+92) 300 564 874</a>
   </div>
 </div>
   
